--- a/Main.jrxml
+++ b/Main.jrxml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.2.0.final using JasperReports Library version 6.2.0  -->
-<!-- 2016-07-20T14:29:19 -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Blank_A4" pageWidth="600" pageHeight="850" columnWidth="560" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="5f275fa3-897b-4753-8c9b-51a1354d9840">
+<!-- 2016-07-20T14:44:40 -->
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Blank_A4" pageWidth="600" pageHeight="125" columnWidth="560" leftMargin="20" rightMargin="20" topMargin="10" bottomMargin="10" isIgnorePagination="true" uuid="5f275fa3-897b-4753-8c9b-51a1354d9840">
 	<property name="com.jaspersoft.studio.unit." value="pixel"/>
+	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<property name="com.jaspersoft.studio.unit.pageHeight" value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.pageWidth" value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.topMargin" value="pixel"/>
@@ -12,7 +13,6 @@
 	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="Employees"/>
-	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<queryString>
 		<![CDATA[SELECT 	e.employeeNumber
 FROM employees e
@@ -51,9 +51,9 @@ WHERE e.employeeNumber IN (	SELECT a.employeeNumber
 		</band>
 	</title>
 	<detail>
-		<band height="260" splitType="Stretch">
+		<band height="50" splitType="Immediate">
 			<subreport>
-				<reportElement x="0" y="20" width="560" height="240" uuid="08702005-1f9e-4b49-bc94-8fc07423af86"/>
+				<reportElement key="" mode="Opaque" x="0" y="0" width="560" height="50" isPrintInFirstWholeBand="true" backcolor="#F5F5F5" uuid="738c22fd-3158-4ebe-b682-f5190e94592f"/>
 				<subreportParameter name="Employee">
 					<subreportParameterExpression><![CDATA[$F{employeeNumber}]]></subreportParameterExpression>
 				</subreportParameter>
@@ -62,7 +62,4 @@ WHERE e.employeeNumber IN (	SELECT a.employeeNumber
 			</subreport>
 		</band>
 	</detail>
-	<pageFooter>
-		<band height="54" splitType="Stretch"/>
-	</pageFooter>
 </jasperReport>
