--- a/Customers.jrxml
+++ b/Customers.jrxml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.2.0.final using JasperReports Library version 6.2.0  -->
-<!-- 2016-07-20T15:21:24 -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Customers" pageWidth="550" pageHeight="100" columnWidth="530" leftMargin="10" rightMargin="10" topMargin="10" bottomMargin="10" uuid="183a2d9d-2c53-44b1-b9d2-d15ae997fd76">
+<!-- 2016-07-20T16:11:49 -->
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Customers" pageWidth="520" pageHeight="100" columnWidth="500" leftMargin="10" rightMargin="10" topMargin="10" bottomMargin="10" uuid="183a2d9d-2c53-44b1-b9d2-d15ae997fd76">
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<property name="com.jaspersoft.studio.unit." value="pixel"/>
-	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="Employees"/>
+	<property name="com.jaspersoft.studio.unit.pageHeight" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.pageWidth" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.topMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.bottomMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.leftMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.rightMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
 	<parameter name="Employee" class="java.lang.Integer"/>
 	<queryString>
 		<![CDATA[SELECT *
@@ -54,53 +61,62 @@ WHERE c.`salesRepEmployeeNumber` =$P{Employee}]]>
 		<band splitType="Stretch"/>
 	</background>
 	<detail>
-		<band height="60">
+		<band height="71">
 			<textField>
-				<reportElement x="0" y="0" width="100" height="19" uuid="bf1176a2-06ee-40b5-8153-8162cc2ef0b2"/>
+				<reportElement x="0" y="11" width="100" height="19" uuid="bf1176a2-06ee-40b5-8153-8162cc2ef0b2"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" FIRST NAME: "]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="0" y="20" width="100" height="19" uuid="d9d0ba48-c189-4ca8-bf4c-4cd4cbc84a18"/>
+				<reportElement x="0" y="31" width="100" height="19" uuid="d9d0ba48-c189-4ca8-bf4c-4cd4cbc84a18"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" LAST NAME: "]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="250" y="0" width="100" height="19" uuid="d446011e-d586-4778-9902-e0c226885759"/>
+				<reportElement x="250" y="11" width="100" height="19" uuid="d446011e-d586-4778-9902-e0c226885759"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" ADDRESS: "]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="0" y="40" width="100" height="19" uuid="62c9f549-fcd4-4e60-8537-68ca4be67935"/>
+				<reportElement x="0" y="51" width="100" height="19" uuid="62c9f549-fcd4-4e60-8537-68ca4be67935"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA["PHONE: "]]></textFieldExpression>
+				<textFieldExpression><![CDATA[" PHONE: "]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="100" y="0" width="150" height="20" uuid="21491351-9a29-4d21-b52d-18799b5036d1"/>
+				<reportElement x="100" y="11" width="150" height="20" uuid="21491351-9a29-4d21-b52d-18799b5036d1"/>
 				<textFieldExpression><![CDATA[$F{contactFirstName}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="100" y="20" width="150" height="20" uuid="838b1154-fac0-4e45-90ec-6412b8b98048"/>
+				<reportElement x="100" y="31" width="150" height="20" uuid="838b1154-fac0-4e45-90ec-6412b8b98048"/>
 				<textFieldExpression><![CDATA[$F{contactLastName}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="100" y="39" width="150" height="20" uuid="b5a04d92-4def-4e05-a916-dcb3c1cb1c47"/>
+				<reportElement x="100" y="50" width="150" height="20" uuid="b5a04d92-4def-4e05-a916-dcb3c1cb1c47"/>
 				<textFieldExpression><![CDATA[$F{phone}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="350" y="0" width="160" height="60" uuid="c5b7e93a-fdb4-4c99-806f-b2dfec9731ad">
+				<reportElement x="350" y="11" width="150" height="60" uuid="c5b7e93a-fdb4-4c99-806f-b2dfec9731ad">
 					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[$F{addressLine1}+"\n"+$F{postalCode}+" - "+$F{city}]]></textFieldExpression>
 			</textField>
+			<frame>
+				<reportElement x="0" y="1" width="500" height="2" uuid="a0865fd0-9765-4b60-92fb-76bfd97afaad"/>
+				<box>
+					<topPen lineWidth="0.2" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.2" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.2" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.2" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+			</frame>
 		</band>
 	</detail>
 </jasperReport>
